--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "start": "node ./dist/server.js"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "axios": "^0.18.0",
-    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.3",
     "styled-system": "^1.0.8"
   },
